update build and test tools and add travis support